fixed vertical scrolling on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,8 +27,23 @@
   }
 }
 
-html, body {
+html, 
+body {
+  max-width: 100vw;
   overflow-x: hidden;
   position: relative;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
   width: 100%;
+  max-width: 100vw;
+  margin: 0 auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
